--- a/demo/vaadin-router-route-actions-demos.html
+++ b/demo/vaadin-router-route-actions-demos.html
@@ -24,11 +24,12 @@
       Vaadin Router provides a flexible API to customize the default route
       resolution rule. Each route may have an <code>action</code> functional
       property that defines how exactly that route is resolved. An <code>action
-      </code> function may or may not return a value. If it does, that completes
-      the resolution pass, and the returned value is what gets rendered.
-      Otherwise, the resolution process continues to check the other properties
-      of the route and apply the default resolution rules, and then further to
-      check other matching routes.
+      </code> function may or may not return a value. If it does not return
+      a value or returns an <code>HTMLElement</code>, the resolution process
+      continues to check the other properties of the route and apply
+      the default resolution rules, and then goes further to check other
+      matching routes. Otherwise, that completes the resolution pass, and
+      the returned value is what gets rendered.
     </p>
     <p>
       The <code>action(context, commands)</code> function receives a <code>context</code>
