fix(router): process children first when resolving a route

--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -990,7 +990,7 @@
             ]);
 
             await router.render('/');
-            checkOutlet(['x-main-layout', 'x-home-view']);
+            checkOutlet(['x-main-layout']);
           });
 
           it('action with redirect return should disallow children', async() => {
