--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -977,23 +977,57 @@
             expect(actionExecuted).to.equal(true);
           });
 
-          it('action with return should be executed before children function and stop it from being executed', async() => {
-            let actionExecuted = false;
-            const children = sinon.spy();
-
+          it('action with HTMLElement return should prevent redirect', async() => {
             router.setRoutes([
-              {path: '/home', children, action: (context, commands) => {
-                actionExecuted = true;
-                return commands.redirect('/users');
-              }},
-              {path: '/users', component: 'x-users-view'},
+              {
+                path: '/',
+                action: (context, {component}) => {
+                  return component('x-main-layout');
+                },
+                redirect: '/users'
+              },
+              {path: '/users', component: 'x-users-view'}
+            ]);
+
+            await router.render('/');
+            checkOutlet(['x-main-layout']);
+          });
+
+          it('action with redirect return should prevent matching children', async() => {
+            router.setRoutes([
+              {
+                path: '/home',
+                action: (context, {redirect}) => {
+                  return redirect('/users');
+                },
+                component: 'x-main-layout',
+                children: () => [
+                  {path: '/', component: 'x-home-view'},
+                ]
+              },
+              {path: '/users', component: 'x-users-view'}
             ]);
 
             await router.render('/home');
+            checkOutlet(['x-users-view']);
+            expect(outlet.firstElementChild.firstElementChild).to.be.null;
+          });
 
-            expect(outlet.children[0].tagName).to.match(/x-users-view/i);
-            expect(actionExecuted).to.equal(true);
-            expect(children).to.not.have.been.called;
+          it('action with HTMLElement return should not prevent matching children', async() => {
+            router.setRoutes([
+              {
+                path: '/',
+                action: (context, {component}) => {
+                  return component('x-main-layout');
+                },
+                children: () => [
+                  {path: '/', component: 'x-home-view'},
+                ]
+              },
+            ]);
+
+            await router.render('/');
+            checkOutlet(['x-main-layout', 'x-home-view']);
           });
 
           it('action with incorrect return throws before redirect', async() => {
@@ -1107,8 +1141,24 @@
             expect(getBundleScripts(existingBundlePath).length).to.equal(0);
           });
 
-          it('redirect should be executed before children function', async() => {
-            const children = sinon.spy();
+          it('action should be executed after children function', async() => {
+            const children = sinon.stub().returns([]);
+            let actionExecuted = false;
+
+            router.setRoutes([
+              {path: '/test', children, component: 'x-test', action: () => {
+                actionExecuted = true;
+                expect(children).to.have.been.called;
+              }},
+            ]);
+
+            await router.render('/test');
+
+            expect(actionExecuted).to.be.true;
+          });
+
+          it('redirect should be executed after children function', async() => {
+            const children = sinon.stub().returns([]);
 
             router.setRoutes([
               {path: '/home', children, redirect: '/users'},
@@ -1118,15 +1168,15 @@
             await router.render('/home/1');
 
             expect(outlet.children[0].tagName).to.match(/x-users-view/i);
-            expect(children).to.not.have.been.called;
+            expect(children).to.have.been.called;
           });
 
-          it('bundle should be executed before children function', async() => {
+          it('bundle should be executed after children function', async() => {
             removeBundle();
 
             router.setRoutes([
               {path: '/test', bundle: existingBundlePath, children: () => {
-                expect(getBundleScripts(existingBundlePath).length).to.equal(1);
+                expect(getBundleScripts(existingBundlePath).length).to.equal(0);
                 return {path: '/child', component: 'x-test-child-view'};
               }},
             ]);
