--- a/test/router/url-for.spec.html
+++ b/test/router/url-for.spec.html
@@ -46,6 +46,119 @@
         router.unsubscribe();
       });
 
+      describe('urlForName static method', () => {
+        beforeEach(() => router.setRoutes([
+          {name: 'app', path: '/app/(.*)?', component: 'x-app', children: [
+            {name: 'home', path: '/home', component: 'x-home-view'},
+            {name: 'user', path: '/users/:userId', component: 'x-user-view'},
+            {name: 'user-profile', path: '/users/:userId/(.*)', component: 'x-user-profile'},
+            {path: '/users', component: 'x-user-list'}
+          ]},
+        ]));
+
+        it('should exist', () => {
+          expect(Vaadin.Router.urlForName).to.be.instanceof(Function);
+        });
+
+        it('should accept first-level route name', () => {
+          expect(Vaadin.Router.urlForName('app')).to.equal('/app');
+        });
+
+        it('should accept child route name', () => {
+          expect(Vaadin.Router.urlForName('home')).to.equal('/app/home');
+        });
+
+        it('should fallback to component name', () => {
+          expect(Vaadin.Router.urlForName('x-user-list')).to.equal('/app/users');
+        });
+
+        it('should support named parameters', () => {
+          expect(Vaadin.Router.urlForName('user', {userId: 42}))
+            .to.equal('/app/users/42');
+        });
+
+        it('should support unnamed parameters', () => {
+          expect(Vaadin.Router.urlForName('app', {0: 42}))
+            .to.equal('/app/42');
+        });
+
+        it('should support named and unnamed parameters', () => {
+          expect(Vaadin.Router.urlForName(
+            'user-profile',
+            {userId: 42, 0: null, 1: 'profile'}
+          )).to.equal('/app/users/42/profile');
+        });
+
+        it('should ignore unknown params', () => {
+          expect(Vaadin.Router.urlForName(
+            'user',
+            {userId: 42, foo: 'bar'}
+          )).to.equal('/app/users/42');
+        });
+
+        it('should throw for not found name', () => {
+          expect(() => Vaadin.Router.urlForName('foo', {}))
+            .to.throw('Route not found');
+        });
+
+        it('should throw for route name duplicating route name', () => {
+          expect(() => {
+            router.setRoutes([
+              {name: 'foo', path: '/', component: 'x-foo-1'},
+              {name: 'foo', path: '/', component: 'x-foo-2'}
+            ]);
+            Vaadin.Router.urlForName('foo');
+          }).to.throw('Duplicate');
+        });
+
+        it('should throw for component name duplicating route name', () => {
+          expect(() => {
+            router.setRoutes([
+              {name: 'x-foo', path: '/', component: 'x-foo-1'},
+              {path: '/', component: 'x-foo'}
+            ]);
+            Vaadin.Router.urlForName('x-foo');
+          }).to.throw('Duplicate');
+        });
+
+        it('should throw for route name duplicating component name', () => {
+          expect(() => {
+            router.setRoutes([
+              {path: '/', component: 'x-foo'},
+              {name: 'x-foo', path: '/', component: 'x-foo-2'}
+            ]);
+            Vaadin.Router.urlForName('x-foo');
+          }).to.throw('Duplicate');
+        });
+
+        it('should throw for component name duplicating component name', () => {
+          expect(() => {
+            router.setRoutes([
+              {path: '/', component: 'x-foo'},
+              {path: '/', component: 'x-foo'}
+            ]);
+            Vaadin.Router.urlForName('x-foo');
+          }).to.throw('Duplicate');
+        });
+
+        it('should use pathToRegexp', () => {
+          const parse = sinon.spy(Vaadin.Router.pathToRegexp, 'parse');
+
+          try {
+            const name = 'user',
+              path = '/app/(.*)?/users/:userId',
+              parameters = {userId: 42, foo: 'bar'};
+            const result = Vaadin.Router.urlForName(name, parameters);
+
+            expect(parse).to.be.calledOnce;
+            expect(parse).to.be.calledWithMatch(path);
+            expect(result).to.equal('/app/users/42');
+          } finally {
+            Vaadin.Router.pathToRegexp.parse.restore();
+          }
+        });
+      });
+
       describe('urlForPath static method', () => {
         it('should exist', () => {
           expect(Vaadin.Router.urlForPath).to.be.instanceof(Function);
@@ -83,16 +196,20 @@
           const compiledRegExp = sinon.stub().returns('/ok/url');
           const compile = sinon.stub(Vaadin.Router.pathToRegexp, 'compile').returns(compiledRegExp);
 
-          const path = '/users/:userId',
-            parameters = {userId: 42, foo: 'bar'};
-          const result = Vaadin.Router.urlForPath(path, parameters);
+          try {
+            const path = '/users/:userId',
+              parameters = {userId: 42, foo: 'bar'};
+            const result = Vaadin.Router.urlForPath(path, parameters);
 
-          expect(compile).to.be.calledOnce;
-          expect(compile).to.be.calledWith(path);
-          expect(compiledRegExp).to.be.calledOnce;
-          expect(compiledRegExp).to.be.calledWithMatch(parameters);
-          expect(compiledRegExp).to.have.returned('/ok/url');
-          expect(result).to.equal('/ok/url');
+            expect(compile).to.be.calledOnce;
+            expect(compile).to.be.calledWith(path);
+            expect(compiledRegExp).to.be.calledOnce;
+            expect(compiledRegExp).to.be.calledWithMatch(parameters);
+            expect(compiledRegExp).to.have.returned('/ok/url');
+            expect(result).to.equal('/ok/url');
+          } finally {
+            Vaadin.Router.pathToRegexp.compile.restore();
+          }
         });
       });
     });
