--- a/demo/vaadin-router-url-generation-demos.html
+++ b/demo/vaadin-router-url-generation-demos.html
@@ -132,6 +132,53 @@
         </script>
       </template>
     </vaadin-demo-snippet>
+
+    <h3>The <code>location.getUrl</code> method</h3>
+    <p>
+      <b><code>
+        <a target="_parent"
+           href="..#/classes/Vaadin.Router.Location#method-getUrl">
+          location.getUrl(params)</a>
+      </code></b> is a method that returns a URL corresponding to the location.
+      When given the params argument, it does parameter substitution
+      in the location’s chain of routes.
+    </p>
+    <p>
+      Arguments:
+    </p>
+    <ul>
+      <li><code>params</code> — optional object with parameters to override
+        the location parameters</li>
+    </ul>
+    <vaadin-demo-snippet id="vaadin-router-url-generation-demo-location-getUrl" iframe-src="iframe.html">
+      <template preserve-content>
+        <div id="outlet"></div>
+        <dom-module id="x-user-layout">
+          <template>
+            <x-user-profile location="[[location]]"></x-user-profile>
+            <a href$="[[_getUrlForUser('me')]]">My profile</a>
+            <a href$="[[_getUrlForUser('admin')]]">Admin profile</a>
+          </template>
+        </dom-module>
+        <script>
+          // import {Router} from '@vaadin/router'; // for Webpack / Polymer CLI
+          // const Router = Vaadin.Router; // for vaadin-router.umd.js
+          const router = new Router(document.getElementById('outlet'));
+          router.setRoutes([
+            {path: '/', redirect: '/users/me'},
+            {path: '/users/:user', component: 'x-user-layout'},
+          ]);
+
+          Polymer({
+            is: 'x-user-layout',
+
+            _getUrlForUser(user) {
+              return this.location.getUrl({user});
+            }
+          });
+        </script>
+      </template>
+    </vaadin-demo-snippet>
   </template>
   <script>
     class VaadinRouterLinkGenerationDemos extends DemoReadyEventEmitter(ElementDemo(Polymer.Element)) {
